@@ -8,6 +8,7 @@ ddos (0.8) stable; urgency=low
   * Added check for missing dependencies on installer script.
   * Unban ip's on the daemon loop instead of creating new unban processes.
   * Added hostname to email notification.
+  * Execute tcpkill when ip is banned for 10 seconds and kill it.
 
  -- Jefferson González <jgmdev@gmail.com>  Fri, 09 Jan 2015 17:27:01 +0200
 
